methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:11: error: '(' expected but identifier found.
  if vuBiscuit == True {
     ^MethodsReturning:16: error: illegal start of simple expression
} 
^