methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit : Boolean = false
  for (i <- 1 to 6) {
    avance()
    if (estSurBiscuit) {
      vuBiscuit = true
    }}
  for (j <- 1 to 6) {
    recule()
  }
  if vuBiscuit == True {
    return true
  } else {
    return false
  }
}